@@ -159,7 +159,7 @@
         Open a file for maps of the areas to be acquired.</LI>
       <LI>
         Locate the first area of interest. Run the Rough Eucentricity procedure or 
-        otherwise adjust the X height to be approximately the eucentric height.</LI>
+        otherwise adjust the Z height to be approximately the eucentric height.</LI>
       <LI>
         Go to the magnification required for the tilt series and acquire an image of 
         exactly the area to be imaged.</LI>
@@ -171,7 +171,7 @@
       <LI>
         Acquire an image and save it as a map.</LI>
       <LI>
-        Check 'For anchor map' in the Navigator dialog.</LI>
+        Check 'For anchor state' in the Navigator dialog.</LI>
       <LI>
         Return to the working magnification (use 'Restore Prior State' in the Imaging 
         State dialog).</LI>
@@ -210,8 +210,9 @@
         Select 'Acquire at Points' from the Navigator menu. Tilt series acquisition 
         will be selected as the action to perform.</LI>
       <LI>
-        Select 'Autocenter beam' if you are set up to use it; 'Cook specimen' if 
-        appropriate, and 'Fine Eucentricity if this operation is not selected in the 
+        Select 'Autocenter beam' if you are set up to use it; 
+        &#39;Realign to Item&#39; to align to the maps at each position; 'Cook specimen' if 
+        appropriate; and 'Fine Eucentricity if this operation is not selected in the 
         tilt series parameters for each series</LI>
       <LI>
         Set 'Close valves at end' and 'Send email' as desired, then press the <B>GO</B> 
