@@ -49,11 +49,10 @@
     <P>These buttons determine whether a single image will be acquired or whether 
       acquisition will repeat automatically. Continuous acquisition is relatively slow 
       in SerialEM for some cameras, but for newer Gatan cameras it accesses continuous 
-      camera modes and is fast. If 
-      you start a continuous acquisition, you can stop it by pressing the space bar 
-      or Esc up pushing the STOP button, and you can restart it by pressing the space 
-      bar again.&nbsp; Most automated operations (i.e., tasks and tilt series) will 
-      use single-frame mode even when taking an image with a parameter set in which 
+      camera modes and is fast. If you start a continuous acquisition, you can stop it 
+      by pressing the space bar or Esc up pushing the STOP button, and you can restart 
+      it by pressing the space bar again.&nbsp; Most automated operations (i.e., tasks 
+      and tilt series) will use single-image mode even when taking an image with a parameter set in which 
       you selected continuous mode.&nbsp; Thus, you should be able to use those 
       operations without having to turn off continuous mode in any of your parameter 
       sets.</P>
