@@ -1093,6 +1093,14 @@
       AstigmatismComaDelays</a> (if you have to add the property, use the defaults for 
       the first two delays).</p>
     <p>
+      To assess the precision of the calibration, you should run it twice under the 
+      same conditions.&nbsp; The program will always report the mean and maximum 
+      difference between a previous and new calibration, averaged over the 8 matrix 
+      terms of the calibration and expressed as a percentage of the largest term.&nbsp; 
+      It is probably best to get a mean and maximum of 5 and 10%, respectively, or 
+      less.&nbsp; The two ways to reduce these errors are to increase the 
+      magnification and the beam tilt; the latter will have a bigger effect.</p>
+    <p>
       <A name="hid_autofocusfocus_setupcoma"></A><B>Setup Coma-free command
         (Calibration - Focus &amp; Tuning sub-menu))</B></p>
     <p>
