@@ -164,8 +164,8 @@
       <P>Shortcut Key:SHIFT+L</P>
       <P><A NAME="hid_process_side_by_side"></A><B>Side by Side command (Process menu)</B></P>
     <P>Use this command to have FFTs displayed in a window next to the main image 
-      display window.&nbsp; This window is a stack of 4 buffers that will roll to save 
-      up to three FFTs when a new single FFT is taken.&nbsp; For a live FFT in 
+      display window.&nbsp; This window is a stack of 8 buffers that will roll to save 
+      up to 7 FFTs when a new single FFT is taken.&nbsp; For a live FFT in 
       continuous mode, the top buffer will be continually replaced.&nbsp; After this 
       option is turned on, the window will be created when an FFT is taken.&nbsp; You 
       can close the window, and it will be reopened when another FFT is taken.&nbsp; 
